@@ -63,8 +63,6 @@ AC_ARG_WITH(userbases, [  --with-userbases Which userbases to compile with ],
 
 if echo $userbases | grep mysql > /dev/null
 then 
-mysqlsource=smysql.cc
-mysqlobject=smysql.cc
 AM_CONDITIONAL(MYSQL, true)
 AC_ARG_WITH(mysql,
     [  --with-mysql=<path>     root directory path of MySQL installation],
@@ -135,13 +133,69 @@ else
 	AM_CONDITIONAL(MYSQL, false)
 fi
 
+if echo $userbases | grep postgresql > /dev/null
+then
+	AC_ARG_WITH(pgsql,
+	    [  --with-pgsql=<path>     root directory path of PgSQL installation],
+	    [PGSQL_lib_check="$withval/lib/pgsql $with_pgsql/lib"
+	PGSQL_inc_check="$withval/include/pgsql"],
+	    [PGSQL_lib_check="/usr/local/pgsql/lib/pgsql /usr/local/lib/pgsql /opt/pgsql/lib/pgsql /usr/lib/pgsql /usr/local/pgsql/lib /usr/local/lib /opt/pgsql/lib /usr/lib"
+	PGSQL_inc_check="/usr/local/pgsql/include/pgsql /usr/local/include/postgresql/ /usr/local/include /opt/pgsql/include/pgsql /opt/pgsql/include /usr/include/pgsql/ /usr/include/postgresql"])
+		AC_ARG_WITH(pgsql-lib,
+	    [  --with-pgsql-lib=<path> directory path of PgSQL library installation],
+	    [PGSQL_lib_check="$withval/lib/pgsql $withval/pgsql $withval"])
+		AC_ARG_WITH(pgsql-includes,
+	    [  --with-pgsql-includes=<path>
+                         directory path of PgSQL header installation],
+	    [PGSQL_inc_check="$withval/include/pgsql $withval/pgsql $withval"])
+		AC_MSG_CHECKING([for PgSQL library directory])
+	PGSQL_libdir=
+	for m in $PGSQL_lib_check; do
+	        if test -d "$m" && \
+		   (test -f "$m/libpq++.so" || test -f "$m/libpq++.a")
+	        then
+	                PGSQL_libdir=$m
+	                break
+	        fi
+	done
+		if test -z "$PGSQL_libdir"; then
+	        AC_MSG_ERROR([Didn't find the pgsql library dir in '$PGSQL_lib_check'])
+	fi
+	case "$PGSQL_libdir" in
+           /usr/lib ) PGSQL_lib="" ;;
+	  /* ) PGSQL_lib="-L$PGSQL_libdir -Wl,-rpath,$PGSQL_libdir" 
+	       LDFLAGS="$PGSQL_lib $LDFLAGS"
+               ;;
+	  * )  AC_MSG_ERROR([The PgSQL library directory ($PGSQL_libdir) must be an absolute path.]) ;;
+	esac
+
+	AC_SUBST(PGSQL_lib)
+	AC_MSG_RESULT([$PGSQL_libdir])
+		AC_MSG_CHECKING([for PgSQL include directory])
+	PGSQL_incdir=
+	for m in $PGSQL_inc_check; do
+	        if test -d "$m" && test -f "$m/libpq++.h"
+	        then
+	                PGSQL_incdir=$m
+	                break
+	        fi
+	done
+		if test -z "$PGSQL_incdir"; then
+	        AC_MSG_ERROR([Didn't find the PgSQL include dir in '$PGSQL_inc_check'])
+	fi
+	case "$PGSQL_incdir" in
+	  /* ) ;;
+	  * )  AC_MSG_ERROR([The PgSQL include directory ($PGSQL_incdir) must be an absolute path.]) ;;
+	esac
+	AC_SUBST(PGSQL_incdir)
+	AC_MSG_RESULT([$PGSQL_incdir])
+fi
+
 # Userbases
 
 AC_SUBST(userbasesdirs)
 AC_SUBST(userbasesfiles)
 AC_SUBST(userbaseslibs)
-AC_SUBST(mysqlsource)
-AC_SUBST(mysqlobject)
 
 tmp=""
 for a in $userbases
@@ -161,4 +215,5 @@ userbases/postgresql/Makefile \
 userbases/mysqlsimplepdns/Makefile \
 userbases/oracle/Makefile \
 userbases/ldap/Makefile \
-Makefile codedocs/Makefile make.init.d)
+Makefile codedocs/Makefile \
+pplistener.init.d powersmtp.init.d powerpop.init.d )
