@@ -1,23 +1,0 @@
-#!/bin/sh
-cat << EOL
-
-prefix=@prefix@
-exec_prefix=\@exec_prefix@
-bindir=\@sbindir@
-
-case "\$1" in
-	start | stop | status)
-	\$bindir/$1 \$1
-	;;
-
-	restart)
-	\$bindir/$1 stop
-	\$bindir/$1 start
-	;;
-	
-	*)
-	echo ahudns [start\|stop\|restart\|status]
-	;;
-esac
-
-EOL
