@@ -2,18 +2,19 @@
 # chkconfig: - 80 75
 # description: PowerPOP makes email available using the pop3 protocol. 
 
-prefix=/usr
-exec_prefix=${prefix}
-bindir=${exec_prefix}/sbin
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+bindir=@bindir@
+sbindir=@sbindir@
 
 case "$1" in
 	start | stop | status)
-	$bindir/powerpop $1
+	$sbindir/powerpop $1
 	;;
 
 	force-reload | restart)
-	$bindir/powerpop stop
-	$bindir/powerpop start
+	$sbindir/powerpop stop
+	$sbindir/powerpop start
 	;;
 	
 	*)
