@@ -1,0 +1,1 @@
+ -ldl -L/opt/oracle/lib -ldl -lclient8  -ldl -lclntst8
