@@ -1,3 +1,5 @@
+INCLUDES=-I@PGSQL_incdir@
+
 EXTRA_DIST=OBJECTFILES
 noinst_LIBRARIES=libuserbase.a
 libuserbase_a_SOURCES=postgresql.cc postgresql.hh
